2006-07-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceundomanager.c: changed DEFAULT_MAX_UNDO_LEVELS
        from 25 to -1; made it use G_DEFINE_TYPE.
	* gtksourceview/gtksourceview.c: use G_DEFINE_TYPE.
        (gtk_sourceview_expose): do not try to draw too many lines.

2006-07-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/def.lang: added C-like trailing
	backslash "line-continue" context.
	* gtksourceview/language-specs/c.lang: use it here.

2006-07-16  Yevgen Muntyan  <muntyan@tamu.edu>

	* configure.in:
	* gtksourceview-1.0.pc.in: removed
	* gtksourceview-2.0.pc.in: added
	* gtksourceview-zip.in:
	* Makefile.am:
	* docs/reference/lang-reference.sgml:
	* docs/reference/Makefile.am:
	* gtksourceview/language-specs/Makefile.am:
	* gtksourceview/gtksourcelanguagesmanager.c: use G_DEFINE_TYPE
	* gtksourceview/Makefile.am:
	* tests/Makefile.am:
		Changed library version to 2.0.

2006-07-16  Yevgen Muntyan  <muntyan@tamu.edu>

	New version of syntax highlighting, with modifications stored
	in the tree.

	gtksourcetagstyle.[ch], gtksourcetagtable.[ch], gtksourcetag-private.h,
	gtksourcesimpleengine.[ch] are not used and will be removed.
	gtksourcelanguage-parser-1.c is not used, but will be modified later
	to use new engine.

	* gtktextbuffer.[ch]: made text-inserted and text-deleted signals
	carry offsets instead of iters and text. Removed dependency on
	GtkSourceTagTable. Replaced GtkSourceTagStyle with GtkSourceStyle.
	Added "debug" signal. Made it use G_DEFINE_TYPE instead of
	hand-written get_type() function.
	gtk_source_buffer_real_insert_text, gtk_source_buffer_real_delete_range:
	modified for new text-inserted and text-deleted signals signature.
	iter_has_syntax_tag: commented it out, it will be removed.
	gtk_source_buffer_set_bracket_match_style: use GtkSourceStyle.
	gtk_source_buffer_set_language: removed FIXME's related to GtkSourceTagTable.
	* gtksourcecontextengine.[ch]: new versions.